--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,6 +11,7 @@
     "requiredReauthentication": "You need to reauthenticate",
     "unknownAuthError": "An unknown error occurred",
     "unknownError": "An unknown error occurred",
+    "retry": "Retry",
     "subscriptionLengthOneWeek": "Weekly",
     "subscriptionLengthOneMonth": "Monthly",
     "subscriptionLengthTwoMonths": "Bi-Monthly",
@@ -26,5 +27,70 @@
     "subscriptionLengthPerSixMonths": "six months",
     "subscriptionLengthPerOneYear": "year",
     "subscriptionLengthPerLifetime": "lifetime",
-    "subscriptionLengthPerUnknown": "unknown"
+    "subscriptionLengthPerUnknown": "unknown",
+    "welcomeHeaderPart1": "Eat out with ",
+    "welcomeHeaderPart2": "confidence",
+    "welcomeSubheader": "Take a photo of a restaurant menu and get allergen information in seconds",
+    "welcomeCTA": "Get started",
+    "aiWarningTitle": "Warning",
+    "aiWarningMessage": "MenYou uses AI and can sometimes generate incorrect or incomplete information. If you are not sure about the results, please make sure to ask the kitchen.",
+    "aiWarningCTA": "Close",
+    "aiWarningDontShowAgain": "Do not show this message again",
+    "navigationMenus": "Menus",
+    "navigationAllergens": "Allergens",
+    "navigationSettings": "Settings",
+    "emptyMenus": "No menus found",
+    "emptyMenusCTA": "Add a menu by pressing the + button",
+    "addMenuTooltip": "Add a new menu",
+    "allergenStatusSafe": "Fine",
+    "allergenStatusIntolerant": "Intolerant",
+    "allergenStatusAllergic": "Allergic",
+    "celery": "Celery",
+    "celeryDescription": "This includes celery stalks, leaves, seeds and the root called celeriac.",
+    "gluten": "Gluten",
+    "glutenDescription": "Wheat, rye, barley and some oats.",
+    "crustacean": "Crustacean",
+    "crustaceanDescription": "Crabs, lobster, prawns and scampi are crustaceans.",
+    "egg": "Egg",
+    "eggDescription": "Eggs are often found in cakes, some meat products, mayonnaise, mousses, pasta, quiche, sauces and pastries",
+    "fish": "Fish",
+    "fishDescription": "You will find this in some fish sauces, pizzas, relishes, salad dressings, stock cubes and Worcestershire sauce.",
+    "lupin": "Lupin",
+    "lupinDescription": "Lupin is a type of legume that can be used in flour.",
+    "milk": "Milk",
+    "milkDescription": "Milk is a common ingredient in butter, cheese, cream, milk powders and yoghurt.",
+    "mollusc": "Mollusc",
+    "molluscDescription": "These include mussels, land snails, squid and whelks, but can also be found in oyster sauce or as an ingredient in fish stews.",
+    "mustard": "Mustard",
+    "mustardDescription": "Liquid mustard, mustard powder and mustard seeds fall into this category.",
+    "nuts": "Nuts",
+    "nutsDescription": "Nuts are often found in bread, biscuits, crackers, desserts, nut powders (often used in Asian curries), stir-fried dishes, ice cream, marzipan (almond paste), nut oils and sauces.",
+    "peanuts": "Peanuts",
+    "peanutsDescription": "Peanuts are often used as an ingredient in biscuits, cakes, curries, desserts, sauces (such as satay sauce), as well as in groundnut oil and peanut flour.",
+    "sesame": "Sesame",
+    "sesameDescription": "Sesame seeds are found in bread, breadsticks, houmous, sesame oil and tahini (sesame paste).",
+    "soya": "Soya",
+    "soyaDescription": "Often found in bean curd, edamame beans, miso paste, textured soya protein, soya flour or tofu, soya is a staple ingredient in oriental food.",
+    "sulphurDioxide": "Sulphur Dioxide",
+    "sulphurDioxideDescription": "This is used as a preservative in dried fruit, meat products, soft drinks and vegetables as well as in wine and beer.",
+    "theme": "Theme",
+    "themeModeSystem": "System",
+    "themeModeLight": "Light",
+    "themeModeDark": "Dark",
+    "askMeSomething": "Ask me something about",
+    "chefBot": "Chef Bot",
+    "chefBotIsTyping": "Chef Bot is typing...",
+    "you": "You",
+    "askAQuestion": "Ask a question",
+    "close": "Close",
+    "vegetarian": "Vegetarian",
+    "vegan": "Vegan",
+    "potentialAllergens": "Potential allergens",
+    "learnMore": "Learn more",
+    "takePhoto": "Take photo",
+    "selectPhoto": "Select photo",
+    "processing": "Processing",
+    "logout": "Logout",
+    "version": "Version",
+    "build": "Build"
 }
