chore: Add menu localization strings and update menu page UI

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -92,5 +92,8 @@
     "processing": "Processing",
     "logout": "Logout",
     "version": "Version",
-    "build": "Build"
+    "build": "Build",
+    "menuName": "Menu name",
+    "enterMenuName": "Enter menu name",
+    "saveMenu": "Save menu"
 }
